--- a/html02/tutorial/tss_styles.css
+++ b/html02/tutorial/tss_styles.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
@@ -15,38 +17,150 @@
 
 /* HTML and Body Styles */
 
+@font-face {
+    font-family: Quicksand;
+    src: url('Quicksand-Regular.woff') format('woff'),
+    url('Quicksand-Regular.ttf') format('truetype');
+}
 
+html {
+   background-color: hsl(27, 72%, 72%);
+}
 
+body {
+   color: rgb(91, 91, 91);
+   background-color: ivory;
+   font-family: Verdana, Geneva, sans-serif;
+}
 
 
 /* Heading Styles */
 
+article#about_tss h1 {
+    color: white;
+    background-color: rgb(222, 128, 60);
+}
+
+article#about_tss h2 {
+    color: white;
+    background-color: rgb(232, 177, 131);
+}
+article.syllabus h1, article.syllabus h2 {
+    background-color: rgb(255, 185, 255);
+    color: rgb(101, 101, 101);
+}
+
+h1 {
+    font-size: 2.2em;
+}
+h2 {
+    font-size: 1.5em;
+}
+
+h1, h2 {
+   color: white;
+   font-family: Quicksand, Verdana, Geneva, sans-serif;
+   background-color: rgb(222, 128, 60);
+   letter-spacing: 0.1em;
+}
 
 
+
+h2 {
+   color: white;
+   background-color: rgb(235, 177, 131);
+}
 
 
 
 /* Aside and Blockquote Styles */
 
+aside {
+    font-size: 0.8em;
+}
 
+aside blockquote {
+    color: rgb(232, 165, 116);
+    quotes: "\201C" "\201D";
+}
+
+aside blockquote::before {
+    content: open-quote;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.6em;
+    font-weight: bold;
+}
+
+aside blockquote::after {
+    content: close-quote;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.6em;
+    font-weight: bold;
+}
+
+aside blockquote {
+    color: rgb(232, 165, 116);
+    margin: 20px 5px;
+}
 
 
 
 /* Navigation Styles */	
 
+nav {
+    font-size: 0.8em;
+}
 
+nav > ul {
+    line-height: 2em;
+    list-style-type: none;
+    padding-left: 5px;
+}
 
+nav > ul > li.newgroup {
+    margin-top: 20px;
+}
 
+nav > ul > li > a:visited, nav > ul > li > a:link {
+    color: rgb(151, 151, 151);
+    text-decoration: none;
+}
+
+nav > ul > li > a:hover, nav > ul > li > a:active {
+    color: rgb(255, 64, 255);
+}
 
 /* List Styles */
 
+article#about_tss ul li:first-of-type {
+    list-style-image: url(runicon.png);
+}
+article#about_tss ul li:nth-of-type(2) {
+    list-style-image: url(bikeicon.png);
+}
+article#about_tss ul li:last-of-type {
+    list-style-image: url(swimicon.png);
+}
 
-
-
+article.syllabus ol {
+    list-style-type: upper-roman;
+}
+article.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+article.syllabus ol ol ol {
+    list-style-type: decimal;
+}
 
 /* Footer Styles */
 
-
+body-footer address {
+    background-color: rgb(222, 128, 60);
+    color: rgba(255, 255, 255, 0.7);
+    font: normal small-caps bold 0.9em/3em;
+    font-family: Quicksand, Geneva, sans-serif;
+    text-align: center;
+}
 
 
 
