--- a/Practice/html02/review/coach_styles.css
+++ b/Practice/html02/review/coach_styles.css
@@ -1,41 +1,128 @@
+@charset "utf-8";
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
    Review Assignment
    
    TSS Typographic Style Sheet
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   05/08/2023
    
    Filename: coach_styles.css
 
 */
-
+@font-face {
+   font-family: Nobile;
+   src: url('nobile-webfont.woff') format('woff'),
+   url('nobile-webfont.ttf') format('truetype');
+}
 
 /* Main Structural Styles */
+html {
+   background-color: hsl(27, 72%, 72%);
+}
 
+body {
+   color: rgb(91,91,91);
+   background-color: ivory;
+   font-family: 'Verdana', 'Geneva', sans-serif;
+}
 
+body > footer address {
+   background-color: rgb(222,128,60);
+   color: rgba(255, 255, 255, 0.6);
+   font-size: small;
+   font-style: normal;
+   text-transform: uppercase;
+   text-align: center;
+}
 
 
 /* Heading Styles */
+h1 {
+   font-weight: 400;
+   font-family: 'Nobile', 'Verdana', 'Geneva', sans-serif;
+   letter-spacing: 0.2em;
+   margin: 0;
+}
 
+section#tss_coaches h1 {
+   font-size: 2.5em;
+   color: hsl(27, 82%, 85%);
+   background-color: hsl(27, 6%, 21%);
+}
+
+article.coach_bio h2 {
+   font-size: 1.6em;
+   font-weight: normal;
+   color: rgb(240, 125, 0);
+}
 
 
 /* Blockquote Styles */
+aside blockquote {
+   font-size: 0.95em;
+   font-family: 'Comic Sans MS', cursive;
+   background-color: rgb(222, 128, 60);
+   color: rgba(255, 255, 255, 0.75);
+   padding: 10px;
+   quotes: '\201C' '\201D';
+}
 
+aside blockquote::before {
+   content: open-quote;
+   font-size: 1.6em;
+   font-family: 'Times New Roman', Times, serif;
+}
 
+aside blockquote::after {
+   content: close-quote;
+   font-size: 1.6em;
+   font-family: 'Times New Roman', Times, serif;
+}
 
 
 /* Navigation Styles */	
 
+body > nav {
+   font-size: 0.8em;
+   line-height: 2em;
+}
+
+nav > ul {
+   list-style: none;
+   padding-left: 5px;
+}
+
+nav ul li:nth-child(6), nav ul li:nth-child(16) {
+   margin-top: 20px;
+}
+
+nav ul li a, nav ul li a:visited {
+   color: rgb(151, 151, 151);
+   text-decoration: none;
+}
+
+nav ul li a:hover, nav ul li a:active {
+   color: rgb(222, 128, 60);
+   text-decoration: underline;
+}
 
 
 
 /* Paragraph Styles */
 
+p {
+   margin: 10px 0 10px 30px;
+}
 
 
 /* List Styles */
+
+article.coach_bio > header > ul {
+   list-style: url('check.png');
+   margin: 0 0 10px 0;
+}
 
 
 
