--- a/code_skool-main/tutorial.05/tutorial/kpaf.css
+++ b/code_skool-main/tutorial.05/tutorial/kpaf.css
@@ -4,8 +4,8 @@
    Tutorial Case
 
    General Style Sheet
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   05/15/2023
 
    Filename:         kpaf.css
    Supporting Files: 
