--- a/code_skool-main/Red_Ball_Pizza/tutorial.06/case3/orderform.css
+++ b/code_skool-main/Red_Ball_Pizza/tutorial.06/case3/orderform.css
@@ -3,8 +3,8 @@
    Tutorial 6
    Case Problem 3
 
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   02/15/2023
 
    Order Form Style Sheet
  
