--- a/code_skool-main/html03/tutorial/pc_reset.css
+++ b/code_skool-main/html03/tutorial/pc_reset.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Reset Style Sheet for the Pandaisia Chocolates Website
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   05/19/2023
    
    Filename: pc_reset.css
 
