--- a/code_skool-main/html03/tutorial/pc_home.css
+++ b/code_skool-main/html03/tutorial/pc_home.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Style Sheet for the Layout of the Pandaisia Chocolates Home Page
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   05/19/2023
    
    Filename: pc_home.css
 
