--- a/code_skool-main/html03/tutorial/pc_home.css
+++ b/code_skool-main/html03/tutorial/pc_home.css
@@ -15,11 +15,19 @@
 
 /* Body Styles */
 
+body {
+   max-width: 960px;
+   min-width: 640px;
+   width: 95%;
+}
 
 
 /* Body Header Styles */
 
-
+body > header > img {
+   display: block;
+   width: 100%;
+}
 
 
 /* Horizontal Navigation Styles */
@@ -38,4 +46,3 @@
 
 
 /* Footer Styles */
-
