--- a/code_skool-main/html03/tutorial/pc_home.css
+++ b/code_skool-main/html03/tutorial/pc_home.css
@@ -16,33 +16,100 @@
 /* Body Styles */
 
 body {
+   margin-left: auto;
+   margin-right: auto;
    max-width: 960px;
    min-width: 640px;
    width: 95%;
 }
 
 
+/* Floating Styles */
+
+nav.horizontalNavigation li {
+   display: block;
+   float: left;
+}
+
+sction#leftColumn {
+   clear: left;
+   float: left;
+   width: 33%;
+}
+
+sction#rightColumn {
+   float: left;
+   width: 67%;
+}
+
+footer>nav.verticalNavigation {
+   float: left;
+   width: 22%;
+}
+
+footer section#contactInfo {
+   float: left;
+   width: 34%;
+}
+
+/* Container Collapse Styles */
+
+body>footer::after {
+   clear: both;
+   content: "";
+   display: table;
+}
+
+
 /* Body Header Styles */
 
-body > header > img {
+body>header>img {
    display: block;
    width: 100%;
+}
+
+body>header>nav.horizontalNavigation li {
+   width: 20%;
 }
 
 
 /* Horizontal Navigation Styles */
 
+nav.horizontalNavigation li {
+   display: block;
+   float: left;
+}
+
+nav.horizantalNavigation a {
+   display: block;
+   text-align: center;
+}
 
 
 /* Left Column Styles */
 
-
+section#leftColumn {
+   clear: left;
+   float: left;
+   width: 33%;
+}
 
 
 /* Right Column Styles */
 
+section#rightColumn {
+   float: left;
+   width: 67%;
+}
 
+section#rightColumn img {
+   display: block;
+   width: 100%;
+}
 
+section#rightColumn>nav.horizontalNavigation li {
+   width: 25%;
+}
 
 
 /* Footer Styles */
