everything's set up nice

--- a/code_skool-main/html03/tutorial/pc_grids.css
+++ b/code_skool-main/html03/tutorial/pc_grids.css
@@ -5,8 +5,8 @@
    Tutorial Case
    
    Style Sheet for Grids used in the Pandaisia Chocolates website
-   Author: 
-   Date:   
+   Author: Lynn Makowski
+   Date:   05/19/2023
    
    Filename: pc_grids.css
 
