--- a/code_skool-main/html03/tutorial/pc_home.css
+++ b/code_skool-main/html03/tutorial/pc_home.css
@@ -91,6 +91,7 @@ nav.horizantalNavigation a {
 section#leftColumn {
    clear: left;
    float: left;
+   padding: 1.5em;
    width: 33%;
 }
 
@@ -113,3 +114,14 @@ section#rightColumn>nav.horizontalNavigation li {
 
 
 /* Footer Styles */
+
+footer {
+   background-color: rgb(71, 52, 29);
+}
+
+footer::after {
+   clear: both;
+   content: "";
+   display: table;
+}
+
