--- a/code_skool-main/html03/tutorial/pc_reset.css
+++ b/code_skool-main/html03/tutorial/pc_reset.css
@@ -15,19 +15,59 @@
 
 /* Structural Styles */
 
-article, aside, figcaption, figure, footer, header, main, nav, section {
+article,
+aside,
+figcaption,
+figure,
+footer,
+header,
+main,
+nav,
+section {
    display: block;
 }
 
 
 /* Typographic Styles */
 
-address, article, aside, blockquote, body, cite, div, dl, dt, em, figcaption, figure, footer, h1, h2, h3, h4, h5, h6, header, html, img, li, main, nav, ol, p, section, span, ul {
+address,
+article,
+aside,
+blockquote,
+body,
+cite,
+div,
+dl,
+dt,
+em,
+figcaption,
+figure,
+footer,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+html,
+img,
+li,
+main,
+nav,
+ol,
+p,
+section,
+span,
+ul {
    background: transparent;
    font-size: 100%;
    margin: 0;
    padding: 0;
    vertical-align: baseline;
+   -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 nav ul {
@@ -41,4 +81,18 @@ nav a {
 
 body {
    line-height: 1;
+}
+
+footer {
+   clear: left;
+}
+
+footer>nav.verticalNavigation {
+   float: left;
+   width: 22%;
+}
+
+footer>section#contactInfo {
+   float: left;
+   width: 34%;
 }
