--- a/2024_javascript_full_stack_linkedin_learn/lynn-blog/src/index.css
+++ b/2024_javascript_full_stack_linkedin_learn/lynn-blog/src/index.css
@@ -1,10 +1,15 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+
+html {
+  background-color: #000;
+  color: #fff;
+  font-family: 'Cutive Mono', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0;
 }
 
 code {
